# cursor-auto-free

./: .env.example  README.md  config.py  cursor_pro_keep_alive.py  pyproject.toml
.github/workflows/: build.yml
email_services/: base.py  factory.py  imap.py  imap_service.py  tempmail.py  tempmail_plus.py  tempmailplus.py  utils.py
